update pointer for ci/cd pytest command

--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -24,4 +24,4 @@ jobs:
           pip install ".[development]"
       - name: Run test suite
         run: |
-          pytest
+          pytest dagster_meltano/
