add meltano install step to ci/cd tests

--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -24,4 +24,5 @@ jobs:
           pip install ".[development]"
       - name: Run test suite
         run: |
+          meltano install
           pytest
