add navigation to tests setp

--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -24,5 +24,7 @@ jobs:
           pip install ".[development]"
       - name: Run test suite
         run: |
+          cd meltano/
           meltano install
+          cd ..
           pytest
